--- a/Animuse/animuse.css
+++ b/Animuse/animuse.css
@@ -110,3 +110,21 @@ i{
     gap: 10px;
     padding: 0.5rem 1rem;
 }
+
+/** styles for visalizer **/
+.visualizer{
+    position: absolute;
+    left: 50%;
+    top: 50%;
+    transform: translate(-50%, -50%);
+    display: flex;
+    gap: 5px;
+}
+
+.visualizer .bar{
+    display: block;
+    width: 2px;
+    height: 5px;
+    background-color: #57ACD2;
+    transition: all 0.2s;
+}
