--- a/Animuse/animuse.css
+++ b/Animuse/animuse.css
@@ -125,6 +125,14 @@ i {
   width: 200px;
   background-color: var(--bg-color-1);
   overflow: hidden;
+  opacity: 0;
+  pointer-events: none;
+  transition: all 0.5s;
+}
+
+.more-controls.active .menu{
+  opacity: 1;
+  pointer-events: all;
 }
 
 .more-controls .menu .volume-control {
