--- a/Profile/profile.css
+++ b/Profile/profile.css
@@ -158,8 +158,10 @@ main {
 
 #content-menu .content-list li a {
   text-decoration: none;
-  padding: 0.5rem 2rem;
   color: var(--primary-font-color);
+  display: block;
+  width: 100%;
+  height: 100%;
 }
 
 #content-menu .content-list li {
@@ -170,6 +172,7 @@ main {
   box-shadow: 0 3px 5px 2px rgba(0, 0, 0, 0.3);
   cursor: pointer;
   transition: all 0.3s;
+  overflow: hidden;
 }
 
 #content-menu .content-list li:hover{
