--- a/Profile/profile.css
+++ b/Profile/profile.css
@@ -328,6 +328,79 @@ main {
   height: 70%;
 }
 
+/** styles for contact section **/
+#contact .contact-button-container{
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  padding: 1rem;
+}
+
+#contact .card-content .row{
+  justify-content: space-evenly;
+  min-width: 70%;
+}
+
+#contact .contact-button-container .contact-button{
+  border: none;
+  background-color: white;
+  color: var(--card-title-color);
+  font-size: 2.5rem;
+  width: 5rem;
+  height: 5rem;
+  border-radius: 50%;
+  transition: all 0.5s;
+  text-decoration: none;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  position: relative;
+}
+
+#contact .contact-button-container .contact-button:hover{
+  background-color: var(--card-title-color);
+  color: white;
+}
+
+#contact .contact-button::before, #contact .contact-button::after{
+  content: "";
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  border-radius: 50%;
+  border: solid 1px var(--card-title-color);
+  opacity: 0;
+  transform: scale(0.6);
+  z-index: -1;
+}
+
+#contact .contact-button:hover::before, #contact .contact-button:hover::after{
+  animation: pulse 2s infinite linear;
+}
+
+
+#contact .contact-button:hover::after{
+  animation-delay: 0.5s;
+}
+
+@keyframes pulse{
+  0%{
+    opacity: 0;
+    transform: scale(0.3);
+  }
+  50%{
+    opacity: 1;
+    transform: scale(1);
+  }
+  100%{
+    opacity: 0;
+    transform: scale(1.7);
+  }
+}
+
 /** media queries **/
 @media (max-width: 576px){
     .card-holder{
