--- a/CSpinner/cspinner.css
+++ b/CSpinner/cspinner.css
@@ -8,23 +8,28 @@ body {
   height: 100vh;
 }
 
+.spinner-item .spinneritem-title{
+  opacity: 0;
+  transition: all 0.7s;
+}
+
 .spinner-item.active .spinneritem-img {
   filter: drop-shadow(0px -3px 10px rgba(35, 207, 212, 0.8));
 }
 
-.spinner-disc {
-  /* background-color: white; */
+.spinner-item.active .spinneritem-title{
+  opacity: 1;
 }
 
-/* .spinner-item:nth-child(1){
-    background-color: blue;
+.spinner-btn{
+  transition: all 0.5s;
 }
-.spinner-item:nth-child(2){
-    background-color: red;
+
+.spinner-btn:hover{
+  background-color: rgba(255,255,255, 0.3) !important;
+  color: rgb(80, 218, 218) !important;
 }
-.spinner-item:nth-child(3){
-    background-color: green;
+
+.spinner-btn:active{
+  background-color: rgba(255,255,255, 0.7) !important;
 }
-.spinner-item:nth-child(4){
-    background-color: rgb(128, 0, 96);
-} */
