--- a/CSpinner/cspinner.css
+++ b/CSpinner/cspinner.css
@@ -14,7 +14,7 @@ body {
 }
 
 .spinner-item.active .spinneritem-img {
-  filter: drop-shadow(0px -3px 10px rgba(35, 207, 212, 0.8));
+  filter: drop-shadow(0px -5px 10px rgb(211, 216, 216));
 }
 
 .spinner-item.active .spinneritem-title{
